Bug 437200 - New Tab menu entries are shown with default profile icon only
Summary: New Tab menu entries are shown with default profile icon only
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.04.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-16 12:58 UTC by Peter K.
Modified: 2021-05-24 20:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.08
Sentry Crash Report:


Attachments
New Tab menu entries with default icons. (81.23 KB, image/png)
2021-05-16 12:58 UTC, Peter K.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Peter K. 2021-05-16 12:58:42 UTC
Created attachment 138483 [details]
New Tab menu entries with default icons.

SUMMARY
New Tab menu entries are shown with default profile icon only. When profile uses another icon (e.g. "red" monitor for root shells), default icon is shown instead.

STEPS TO REPRODUCE
1. Select File -> New Tab
2. 
3. 

OBSERVED RESULT
Menu entries with default profile icon are shown

EXPECTED RESULT
Menu entries with configured profile icon are shown.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.21.90
KDE Frameworks Version: 5.82.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
In attached picture root shell profiles are configured with "red" monitor icons.
Comment 1 Bug Janitor Service 2021-05-16 13:28:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/391
Comment 2 Ahmad Samir 2021-05-16 15:44:02 UTC
Git commit e03a468075c7067f62dba0dd5b513e8fc109f5d4 by Ahmad Samir.
Committed on 16/05/2021 at 13:24.
Pushed by ahmadsamir into branch 'master'.

Don't override profile icon in "New Tab" menu

We only need to set the favourite emblem for the default profile icon, for
other profiles, the profile icon is already set on the menu action.

Rename a lambda to a more meaningful name.
FIXED-IN: 21.08

M  +3    -4    src/MainWindow.cpp

https://invent.kde.org/utilities/konsole/commit/e03a468075c7067f62dba0dd5b513e8fc109f5d4
Comment 3 Kurt Hindenburg 2021-05-24 20:41:53 UTC
Git commit c29e734845950446f9d27e007f3b8486d7f5c0b1 by Kurt Hindenburg, on behalf of Ahmad Samir.
Committed on 24/05/2021 at 20:28.
Pushed by hindenburg into branch 'release/21.04'.

Don't override profile icon in "New Tab" menu

We only need to set the favourite emblem for the default profile icon, for
other profiles, the profile icon is already set on the menu action.

Rename a lambda to a more meaningful name.
FIXED-IN: 21.08
(cherry picked from commit e03a468075c7067f62dba0dd5b513e8fc109f5d4)

M  +3    -4    src/MainWindow.cpp

https://invent.kde.org/utilities/konsole/commit/c29e734845950446f9d27e007f3b8486d7f5c0b1