Don't override profile icon in "New Tab" menu

We only need to set the favourite emblem for the default profile icon, for
other profiles, the profile icon is already set on the menu action.

Rename a lambda to a more meaningful name.

BUG: 437200
FIXED-IN: 21.08
(cherry picked from commit e03a468075c7067f62dba0dd5b513e8fc109f5d4)