src/MainWindow.cpp
@@ -415,7 +415,7 @@ void MainWindow::profileListChanged(const QList<QAction *> &sessionActions)
         for (QAction *sessionAction : sessionActions) {
             _newTabMenuAction->menu()->addAction(sessionAction);
 
-            auto setActionFont = [sessionAction](bool isBold) {
+            auto setActionFontBold = [sessionAction](bool isBold) {
                 QFont actionFont = sessionAction->font();
                 actionFont.setBold(isBold);
                 sessionAction->setFont(actionFont);
@@ -425,10 +425,9 @@ void MainWindow::profileListChanged(const QList<QAction *> &sessionActions)
             if (profile && profile->name() == sessionAction->text().remove(QLatin1Char('&'))) {
                 QIcon icon(KIconLoader::global()->loadIcon(profile->icon(), KIconLoader::Small, 0, KIconLoader::DefaultState, QStringList(QStringLiteral("emblem-favorite"))));
                 sessionAction->setIcon(icon);
-                setActionFont(true);
+                setActionFontBold(true);
             } else {
-                sessionAction->setIcon(QIcon::fromTheme(profile->icon()));
-                setActionFont(false);
+                setActionFontBold(false);
             }
         }
     } else {
